parse connect object

--- a/src/components/test-api-panel.module.css
+++ b/src/components/test-api-panel.module.css
@@ -1,9 +1,17 @@
-.runbutton {
+.connectbutton {
   background-color: burlywood;
   padding: 2;
   margin: 1em;
   padding: 0.5em;
-  width: 10ch;
+  width: 15ch;
+}
+
+.keywordbutton {
+  background-color:darkkhaki;
+  padding: 2;
+  margin: 1em;
+  padding: 0.5em;
+  width: 15ch;
 }
 
 .textarea {
