--- a/src/components/test-api-panel.module.css
+++ b/src/components/test-api-panel.module.css
@@ -14,6 +14,14 @@
   width: 15ch;
 }
 
+.dropdownbutton {
+  background-color:deepskyblue;
+  padding: 2;
+  margin: 1em;
+  padding: 0.5em;
+  width: 25ch;
+}
+
 .textarea {
   width: 100%;
   height: 20em;
